tests/parse-fail/bad_tuple1.fl.0.exp
Error: bad_tuple1.fl(3,21): Expected type signature, but found: )
pub mod bad_tuple1 {
    pub struct BadTuple1 {
        pub t : (a, );
                    ^  
    }
}
