tests/parse-fail/bad_tuple1.fl
pub mod bad_tuple1 {
    pub struct BadTuple1 {
        pub t : (a, );
    }
}
